test_regress/t/t_delay_stmtdly_bad.out
%Warning-ASSIGNDLY: t/t_delay.v:22:13: Unsupported: Ignoring delay on this assignment/primitive.
   22 |    assign #(1.2000000000000000) dly1 = dly0 + 32'h1;
      |             ^~~~~~~~~~~~~~~~~~
                    ... For warning description see https://verilator.org/warn/ASSIGNDLY?v=latest
                    ... Use "/* verilator lint_off ASSIGNDLY */" and lint_on around source to disable this message.
%Warning-STMTDLY: t/t_delay.v:43:11: Unsupported: Ignoring delay on this delayed statement.
                                   : ... In instance t
   43 |          #100 $finish;
      |           ^~~
%Warning-BLKSEQ: t/t_delay.v:37:20: Blocking assignments (=) in sequential (flop or latch) block
                                  : ... Suggest delayed assignments (<=)
   37 |          dly_s.dly = 55;
      |                    ^
%Error: Exiting due to
